<resources>
    <string name="app_name">Login App</string>
    <string name="LoginApp">label</string>
    <string name="todo" />
    <string name="todo1" />
    <string name="todo2" />
    <string name="or_sign_in_with1">or sign in with?</string>
    <string name="forgot_passwor">forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="login">Log In</string>
    <string name="login1">Login</string>
    <string name="login2">login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Sign_in">Sign In</string>
    <string name="Submit">Submit</string>
    <string name="welcome" />
    <string name="welcome1">Welcome</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="register1">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reg">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dad">Email</string>
    <string name="submit">Submit</string>
    <string name="password11">Confirm Password</string>
    <string name="pas">Phone No</string>
    <string name="phone_no">phone No</string>
    <string name="to_increase_followers_likes_click_on_image_below"><![CDATA[To increase Followers & Likes Click On Image Below]]></string>
    <string name="to_increase_followers_likes_click_on_image_below11">to_increase_followers_likes_click_on_image_below:</string>
    <string name="to_increase_facebook_likes_followers_login_first"><![CDATA[To Increase Facebook Likes & Followers Login First:]]></string>
    <string name="click_here">Click Here ***</string>
    <string name="hello0">Hello0</string>
    <string name="created_by_sonu_roy">Created by:Sonu Roy</string>
    <string name="click_on_the_image_to_increase_instagram_followers_and_likes">Click On the Image To Increase Instagram Followers And Likes</string>
    <string name="netflix_with_facebook">Netflix With Facebook</string>
    <string name="earn_with_facebook">Earn With Facebook</string>
    <string name="click_given_below_you_want_to_perform">Click GIven Below You Want To Perform</string>
    <string name="already_have_an_account">Already Have An Account</string>

</resources>