<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sk1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Sign_in"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3FFF"
        android:text="@string/login2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textColorHighlight="@color/purple_500"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/forg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignEnd="@id/signin"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_passwor"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-13dp"
        android:text="@string/dont_have_an_account"
        android:textColor="#81D4FA"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dont"
        android:layout_alignBottom="@+id/dont"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="-15dp"
        android:layout_toEndOf="@+id/dont"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="#D1C4E9"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/teal_200"
        android:textSize="25sp" />


    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/fb_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"

            android:src="@drawable/fb"
            android:contentDescription="@string/todo1" />

        <ImageView
            android:id="@+id/insta_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/app_ic"
            android:contentDescription="@string/todo2" />

    </LinearLayout>


</RelativeLayout>