<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sk1"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/e"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginTop="4sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:text="@string/to_increase_facebook_likes_followers_login_first"
        android:textColor="#81D4FA"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_below="@id/a"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:text="@string/click_on_the_image_to_increase_instagram_followers_and_likes"
        android:textColor="#81D4FA"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_below="@id/b"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:text="@string/earn_with_facebook"
        android:textColor="#81D4FA"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_below="@id/c"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:text="@string/netflix_with_facebook"
        android:textColor="#81D4FA"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginTop="3sp"
        android:layout_marginEnd="4sp"
        android:layout_marginBottom="40sp"
        android:text="@string/click_given_below_you_want_to_perform"
        android:textColor="@color/teal_200"
        android:textSize="24sp" />


    <Button
    android:id="@+id/signout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:padding="15dp"
    android:text="@string/sign_out"
    tools:ignore="TextContrastCheck" />


</RelativeLayout>