<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sk1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="First Name"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="20dp"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawablePadding="30dp"
        android:hint="@string/last_name"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck,TextFields"
        android:inputType="text" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/dad"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
      android:hint="@string/password11"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/pass11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="p"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/phone_no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Sub_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aas"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:backgroundTint="#f3f"
        android:layout_marginTop="1dp"
        />
    <TextView
        android:id="@+id/aas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_below="@id/pass11"/>




</RelativeLayout>