<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:src="@drawable/aaa"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dont_have_an_account" />

    <TextView
        android:id="@+id/te"
        android:layout_marginVertical="160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="10dp"

        />

    <TextView
        android:id="@+id/aaaaa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginVertical="180dp"
        android:text="@string/created_by_sonu_roy"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="15sp"
        android:textStyle="bold"


        />

</RelativeLayout>
